Progress
-some other improvements (functional)